<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent" android:padding="5dp"
              android:layout_height="fill_parent">

    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
                android:layout_weight="1" android:scrollbars="vertical">

        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
                      android:orientation="vertical">

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/aboutText"
                      android:textSize="17sp" />

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textColor="@color/holo_blue_dark" android:layout_marginTop="10dp"
                      android:text="Prediction Scale" android:textSize="20sp" />

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textColor="@color/holo_blue_dark" android:textSize="15sp"
                      android:text="@string/IfYouPredictText" />

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/predictScore1"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/predictScore2"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/predictScore3"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/predictScore4"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/predictScore5"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textColor="@color/holo_blue_dark" android:textSize="15sp"
                      android:text="Bonus Points" android:layout_marginTop="10dp" />

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/winningTeamText"/>

            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="Terms of Use" android:textColor="@color/holo_blue_dark"
                      android:layout_marginTop="20dp" android:textSize="15sp" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:text="@string/termsOfUse"/>

        </LinearLayout>

    </ScrollView>

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:text="@string/copyright" android:gravity="center_horizontal"
            android:textColor="#cccccc"/>

</LinearLayout>